# etcd-ydb

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  NOTICE  README.md  clang.toolchain  conanfile.txt  docker-compose.yml  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
benchmark/: README.md  main.py
benchmark/benchmark/: go.mod  go.sum  put.go  range.go  root.go  txn_mixed.go  txn_put.go  util.go
benchmark/log_parser/: fs.py  main.py  parse.py  plot.py
benchmark/put/: 1.txt  2.txt  3.txt
benchmark/range/: 1.txt  2.txt  3.txt
benchmark/txn-mixed/: 1.txt  2.txt  3.txt
benchmark/txn-mixed/1000x100conns0.2ratio/: 1.txt  2.txt  3.txt
benchmark/txn-mixed/100x1conns0.1ratio/: 1.txt  2.txt  3.txt
benchmark/txn-put/: 1.txt  2.txt  3.txt
benchmark/txn-put/100x1conns16ops/: 1.txt  2.txt  3.txt
benchmark/txn-put/100x1conns64ops/: 1.txt  2.txt  3.txt
cmake/: userver.cmake
conan/profiles/etcd-ydb/: default
configs/: static_config.yaml
pkg/etcd/: client.go  compact.go  compare.go  delete.go  key_value.go  put.go  range.go  txn.go
pkg/report/: report.go
proto/: CMakeLists.txt
proto/etcd/api/etcdserverpb/: rpc.proto
proto/etcd/server/etcdserver/api/v3election/v3electionpb/: v3election.proto
proto/etcd/server/etcdserver/api/v3lock/v3lockpb/: v3lock.proto
scripts/log_parser/: fs.py  main.py  parse.py  plot.py
src/: main.cpp
src/components/etcd/api/: KV_service_component.cpp  KV_service_component.h
src/etcd/api/: KV_service_component.cpp  KV_service_component.h
test/etcd/: compact_test.go  delete_test.go  main_test.go  put_test.go  range_test.go  revision_test.go  txn_test.go  utils_test.go
tools/benchmark/: kv.go  mixed.go  put.go  range.go  root.go  run.sh  txn.go  txn_mixed.go  txn_put.go  txn_range.go
